COS013/Quarto Trabalho/npr.output
Terminais sem uso na gramática

    FOR


Estado 3 conflitos: 3 de deslocamento/redução
Estado 11 conflitos: 3 de deslocamento/redução
Estado 18 conflitos: 1 de deslocamento/redução
Estado 20 conflitos: 3 de deslocamento/redução
Estado 26 conflitos: 1 de deslocamento/redução
Estado 30 conflitos: 3 de deslocamento/redução
Estado 54 conflitos: 3 de deslocamento/redução
Estado 56 conflitos: 3 de deslocamento/redução
Estado 58 conflitos: 3 de deslocamento/redução
Estado 60 conflitos: 3 de deslocamento/redução
Estado 61 conflitos: 3 de deslocamento/redução
Estado 62 conflitos: 3 de deslocamento/redução
Estado 63 conflitos: 3 de deslocamento/redução
Estado 64 conflitos: 3 de deslocamento/redução
Estado 65 conflitos: 3 de deslocamento/redução
Estado 66 conflitos: 3 de deslocamento/redução
Estado 67 conflitos: 3 de deslocamento/redução
Estado 68 conflitos: 3 de deslocamento/redução, 1 de redução/redução
Estado 71 conflitos: 3 de deslocamento/redução
Estado 73 conflitos: 3 de deslocamento/redução
Estado 75 conflitos: 3 de deslocamento/redução
Estado 79 conflitos: 3 de deslocamento/redução
Estado 80 conflitos: 1 de deslocamento/redução
Estado 82 conflitos: 11 de deslocamento/redução
Estado 84 conflitos: 4 de deslocamento/redução
Estado 86 conflitos: 11 de deslocamento/redução
Estado 87 conflitos: 4 de deslocamento/redução
Estado 88 conflitos: 4 de deslocamento/redução
Estado 89 conflitos: 4 de deslocamento/redução
Estado 90 conflitos: 4 de deslocamento/redução
Estado 91 conflitos: 4 de deslocamento/redução
Estado 92 conflitos: 4 de deslocamento/redução
Estado 93 conflitos: 4 de deslocamento/redução
Estado 100 conflitos: 3 de deslocamento/redução
Estado 116 conflitos: 16 de redução/redução
Estado 119 conflitos: 3 de deslocamento/redução
Estado 120 conflitos: 3 de deslocamento/redução
Estado 121 conflitos: 1 de deslocamento/redução
Estado 122 conflitos: 2 de redução/redução
Estado 123 conflitos: 2 de redução/redução
Estado 124 conflitos: 2 de redução/redução
Estado 125 conflitos: 2 de redução/redução
Estado 126 conflitos: 2 de redução/redução
Estado 127 conflitos: 2 de redução/redução
Estado 130 conflitos: 3 de deslocamento/redução
Estado 132 conflitos: 4 de deslocamento/redução
Estado 133 conflitos: 3 de deslocamento/redução
Estado 138 conflitos: 4 de deslocamento/redução
Estado 140 conflitos: 3 de deslocamento/redução
Estado 146 conflitos: 3 de deslocamento/redução


Gramática

    0 $accept: FIM $end

    1 FIM: S

    2 S: CMDs

    3 CMDs: CMDs CMD
    4     | ε

    5 CMD: CMD_LET DELIMITER
    6    | CMD_CONST DELIMITER
    7    | CMD_VAR DELIMITER
    8    | CMD_IF
    9    | '{' EMPILHA_TABLE CMDs DESEMPILHA_TABLE '}'
   10    | Expr DELIMITER
   11    | CMD_FUNC DELIMITER
   12    | CMD_FUNC
   13    | Expr ASM DELIMITER
   14    | RETURN Expr DELIMITER

   15 CMD_LET: LET LET_VARs

   16 LET_VARs: LET_VAR ',' LET_VARs
   17         | LET_VAR

   18 LET_VAR: ID
   19        | ID '=' '{' '}'
   20        | ID '=' '[' ']'
   21        | ID '=' Expr

   22 CMD_CONST: CONST CONST_VARs

   23 CONST_VARs: CONST_VAR ',' CONST_VARs
   24           | CONST_VAR

   25 CONST_VAR: ID
   26          | ID '=' '{' '}'
   27          | ID '=' '[' ']'
   28          | ID '=' Expr

   29 CMD_VAR: VAR VAR_VARs

   30 VAR_VARs: VAR_VAR ',' VAR_VARs
   31         | VAR_VAR

   32 VAR_VAR: ID
   33        | ID '=' '{' '}'
   34        | ID '=' '[' ']'
   35        | ID '=' Expr

   36 CMD_IF: IF '(' Expr ')' CMD ELSE CMD
   37       | IF '(' Expr ')' CMD

   38 EMPILHA_TABLE: ε

   39 DESEMPILHA_TABLE: ε

   40 $@1: ε

   41 CMD_FUNC: FUNCTION ID $@1 '(' EMPILHA_TABLE PARAMETERS ')' '{' CMDs '}'

   42 PARAMETERS: PARAMs
   43           | ε

   44 PARAMs: PARAMs ',' PARAM
   45       | PARAM

   46 PARAM: ID
   47      | ID '=' Expr

   48 ARGUMENTS: ARGs
   49          | ε

   50 ARGs: ARGs ',' ARG
   51     | ARG

   52 ARG: Expr

   53 LVALUE: ID

   54 LVALUEPROP: Expr '[' Expr ']'
   55           | Expr '[' Expr ']' '=' Expr
   56           | Expr '.' LVALUE '=' Expr
   57           | Expr '.' LVALUE

   58 Expr: LVALUE '=' '{' '}'
   59     | LVALUE '=' Expr
   60     | Expr ST Expr
   61     | Expr GT Expr
   62     | Expr '+' Expr
   63     | Expr '-' Expr
   64     | Expr '*' Expr
   65     | Expr '/' Expr
   66     | Expr '%' Expr
   67     | Expr DOUBLE_EQUAL Expr
   68     | LVALUE PLUS_EQUAL Expr
   69     | DOUBLE_PLUS LVALUE
   70     | LVALUE DOUBLE_PLUS
   71     | NUM
   72     | '-' NUM
   73     | Expr '(' ARGUMENTS ')'
   74     | STRING
   75     | LVALUE
   76     | LVALUEPROP
   77     | '(' Expr ')'
   78     | '(' '{' '}' ')'
   79     | '{' '}'
   80     | '[' ']'
   81     | V_TRUE
   82     | V_FALSE
   83     | ε


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '%' (37) 66
    '(' (40) 36 37 41 73 77 78
    ')' (41) 36 37 41 73 77 78
    '*' (42) 64
    '+' (43) 62
    ',' (44) 16 23 30 44 50
    '-' (45) 63 72
    '.' (46) 56 57
    '/' (47) 65
    '=' (61) 19 20 21 26 27 28 33 34 35 47 55 56 58 59
    '[' (91) 20 27 34 54 55 80
    ']' (93) 20 27 34 54 55 80
    '{' (123) 9 19 26 33 41 58 78 79
    '}' (125) 9 19 26 33 41 58 78 79
    error (256)
    ID (258) 18 19 20 21 25 26 27 28 32 33 34 35 41 46 47 53
    IF (259) 36 37
    ELSE (260) 36
    LET (261) 15
    CONST (262) 22
    VAR (263) 29
    FOR (264)
    FUNCTION (265) 41
    ASM (266) 13
    RETURN (267) 14
    STRING (268) 74
    NUM (269) 71 72
    V_TRUE (270) 81
    V_FALSE (271) 82
    DOUBLE_EQUAL (272) 67
    DELIMITER (273) 5 6 7 10 11 13 14
    PLUS_EQUAL (274) 68
    DOUBLE_PLUS (275) 69 70
    GT (276) 61
    ST (277) 60


Não terminais com as regras onde eles aparecem

    $accept (37)
        à esquerda: 0
    FIM (38)
        à esquerda: 1
        à direita: 0
    S (39)
        à esquerda: 2
        à direita: 1
    CMDs (40)
        à esquerda: 3 4
        à direita: 2 3 9 41
    CMD (41)
        à esquerda: 5 6 7 8 9 10 11 12 13 14
        à direita: 3 36 37
    CMD_LET (42)
        à esquerda: 15
        à direita: 5
    LET_VARs (43)
        à esquerda: 16 17
        à direita: 15 16
    LET_VAR (44)
        à esquerda: 18 19 20 21
        à direita: 16 17
    CMD_CONST (45)
        à esquerda: 22
        à direita: 6
    CONST_VARs (46)
        à esquerda: 23 24
        à direita: 22 23
    CONST_VAR (47)
        à esquerda: 25 26 27 28
        à direita: 23 24
    CMD_VAR (48)
        à esquerda: 29
        à direita: 7
    VAR_VARs (49)
        à esquerda: 30 31
        à direita: 29 30
    VAR_VAR (50)
        à esquerda: 32 33 34 35
        à direita: 30 31
    CMD_IF (51)
        à esquerda: 36 37
        à direita: 8
    EMPILHA_TABLE (52)
        à esquerda: 38
        à direita: 9 41
    DESEMPILHA_TABLE (53)
        à esquerda: 39
        à direita: 9
    CMD_FUNC (54)
        à esquerda: 41
        à direita: 11 12
    $@1 (55)
        à esquerda: 40
        à direita: 41
    PARAMETERS (56)
        à esquerda: 42 43
        à direita: 41
    PARAMs (57)
        à esquerda: 44 45
        à direita: 42 44
    PARAM (58)
        à esquerda: 46 47
        à direita: 44 45
    ARGUMENTS (59)
        à esquerda: 48 49
        à direita: 73
    ARGs (60)
        à esquerda: 50 51
        à direita: 48 50
    ARG (61)
        à esquerda: 52
        à direita: 50 51
    LVALUE (62)
        à esquerda: 53
        à direita: 56 57 58 59 68 69 70 75
    LVALUEPROP (63)
        à esquerda: 54 55 56 57
        à direita: 76
    Expr (64)
        à esquerda: 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83
        à direita: 10 13 14 21 28 35 36 37 47 52 54 55 56 57 59 60 61 62 63 64 65 66 67 68 73 77


Estado 0

    0 $accept: • FIM $end

    $padrão  reduzir usando a regra 4 (CMDs)

    FIM   ir ao estado 1
    S     ir ao estado 2
    CMDs  ir ao estado 3


Estado 1

    0 $accept: FIM • $end

    $end  deslocar, e ir ao estado 4


Estado 2

    1 FIM: S •

    $padrão  reduzir usando a regra 1 (FIM)


Estado 3

    2 S: CMDs •
    3 CMDs: CMDs • CMD

    ID           deslocar, e ir ao estado 5
    IF           deslocar, e ir ao estado 6
    LET          deslocar, e ir ao estado 7
    CONST        deslocar, e ir ao estado 8
    VAR          deslocar, e ir ao estado 9
    FUNCTION     deslocar, e ir ao estado 10
    RETURN       deslocar, e ir ao estado 11
    STRING       deslocar, e ir ao estado 12
    NUM          deslocar, e ir ao estado 13
    V_TRUE       deslocar, e ir ao estado 14
    V_FALSE      deslocar, e ir ao estado 15
    DOUBLE_PLUS  deslocar, e ir ao estado 16
    '-'          deslocar, e ir ao estado 17
    '{'          deslocar, e ir ao estado 18
    '['          deslocar, e ir ao estado 19
    '('          deslocar, e ir ao estado 20

    $end     reduzir usando a regra 2 (S)
    '-'      [reduzir usando a regra 83 (Expr)]
    '['      [reduzir usando a regra 83 (Expr)]
    '('      [reduzir usando a regra 83 (Expr)]
    $padrão  reduzir usando a regra 83 (Expr)

    CMD         ir ao estado 21
    CMD_LET     ir ao estado 22
    CMD_CONST   ir ao estado 23
    CMD_VAR     ir ao estado 24
    CMD_IF      ir ao estado 25
    CMD_FUNC    ir ao estado 26
    LVALUE      ir ao estado 27
    LVALUEPROP  ir ao estado 28
    Expr        ir ao estado 29


Estado 4

    0 $accept: FIM $end •

    $padrão  aceitar


Estado 5

   53 LVALUE: ID •

    $padrão  reduzir usando a regra 53 (LVALUE)


Estado 6

   36 CMD_IF: IF • '(' Expr ')' CMD ELSE CMD
   37       | IF • '(' Expr ')' CMD

    '('  deslocar, e ir ao estado 30


Estado 7

   15 CMD_LET: LET • LET_VARs

    ID  deslocar, e ir ao estado 31

    LET_VARs  ir ao estado 32
    LET_VAR   ir ao estado 33


Estado 8

   22 CMD_CONST: CONST • CONST_VARs

    ID  deslocar, e ir ao estado 34

    CONST_VARs  ir ao estado 35
    CONST_VAR   ir ao estado 36


Estado 9

   29 CMD_VAR: VAR • VAR_VARs

    ID  deslocar, e ir ao estado 37

    VAR_VARs  ir ao estado 38
    VAR_VAR   ir ao estado 39


Estado 10

   41 CMD_FUNC: FUNCTION • ID $@1 '(' EMPILHA_TABLE PARAMETERS ')' '{' CMDs '}'

    ID  deslocar, e ir ao estado 40


Estado 11

   14 CMD: RETURN • Expr DELIMITER

    ID           deslocar, e ir ao estado 5
    STRING       deslocar, e ir ao estado 12
    NUM          deslocar, e ir ao estado 13
    V_TRUE       deslocar, e ir ao estado 14
    V_FALSE      deslocar, e ir ao estado 15
    DOUBLE_PLUS  deslocar, e ir ao estado 16
    '-'          deslocar, e ir ao estado 17
    '{'          deslocar, e ir ao estado 41
    '['          deslocar, e ir ao estado 19
    '('          deslocar, e ir ao estado 20

    '-'      [reduzir usando a regra 83 (Expr)]
    '['      [reduzir usando a regra 83 (Expr)]
    '('      [reduzir usando a regra 83 (Expr)]
    $padrão  reduzir usando a regra 83 (Expr)

    LVALUE      ir ao estado 27
    LVALUEPROP  ir ao estado 28
    Expr        ir ao estado 42


Estado 12

   74 Expr: STRING •

    $padrão  reduzir usando a regra 74 (Expr)


Estado 13

   71 Expr: NUM •

    $padrão  reduzir usando a regra 71 (Expr)


Estado 14

   81 Expr: V_TRUE •

    $padrão  reduzir usando a regra 81 (Expr)


Estado 15

   82 Expr: V_FALSE •

    $padrão  reduzir usando a regra 82 (Expr)


Estado 16

   69 Expr: DOUBLE_PLUS • LVALUE

    ID  deslocar, e ir ao estado 5

    LVALUE  ir ao estado 43


Estado 17

   72 Expr: '-' • NUM

    NUM  deslocar, e ir ao estado 44


Estado 18

    9 CMD: '{' • EMPILHA_TABLE CMDs DESEMPILHA_TABLE '}'
   79 Expr: '{' • '}'

    '}'  deslocar, e ir ao estado 45

    '}'      [reduzir usando a regra 38 (EMPILHA_TABLE)]
    $padrão  reduzir usando a regra 38 (EMPILHA_TABLE)

    EMPILHA_TABLE  ir ao estado 46


Estado 19

   80 Expr: '[' • ']'

    ']'  deslocar, e ir ao estado 47


Estado 20

   77 Expr: '(' • Expr ')'
   78     | '(' • '{' '}' ')'

    ID           deslocar, e ir ao estado 5
    STRING       deslocar, e ir ao estado 12
    NUM          deslocar, e ir ao estado 13
    V_TRUE       deslocar, e ir ao estado 14
    V_FALSE      deslocar, e ir ao estado 15
    DOUBLE_PLUS  deslocar, e ir ao estado 16
    '-'          deslocar, e ir ao estado 17
    '{'          deslocar, e ir ao estado 48
    '['          deslocar, e ir ao estado 19
    '('          deslocar, e ir ao estado 20

    '-'      [reduzir usando a regra 83 (Expr)]
    '['      [reduzir usando a regra 83 (Expr)]
    '('      [reduzir usando a regra 83 (Expr)]
    $padrão  reduzir usando a regra 83 (Expr)

    LVALUE      ir ao estado 27
    LVALUEPROP  ir ao estado 28
    Expr        ir ao estado 49


Estado 21

    3 CMDs: CMDs CMD •

    $padrão  reduzir usando a regra 3 (CMDs)


Estado 22

    5 CMD: CMD_LET • DELIMITER

    DELIMITER  deslocar, e ir ao estado 50


Estado 23

    6 CMD: CMD_CONST • DELIMITER

    DELIMITER  deslocar, e ir ao estado 51


Estado 24

    7 CMD: CMD_VAR • DELIMITER

    DELIMITER  deslocar, e ir ao estado 52


Estado 25

    8 CMD: CMD_IF •

    $padrão  reduzir usando a regra 8 (CMD)


Estado 26

   11 CMD: CMD_FUNC • DELIMITER
   12    | CMD_FUNC •

    DELIMITER  deslocar, e ir ao estado 53

    DELIMITER  [reduzir usando a regra 12 (CMD)]
    $padrão    reduzir usando a regra 12 (CMD)


Estado 27

   58 Expr: LVALUE • '=' '{' '}'
   59     | LVALUE • '=' Expr
   68     | LVALUE • PLUS_EQUAL Expr
   70     | LVALUE • DOUBLE_PLUS
   75     | LVALUE •

    PLUS_EQUAL   deslocar, e ir ao estado 54
    DOUBLE_PLUS  deslocar, e ir ao estado 55
    '='          deslocar, e ir ao estado 56

    $padrão  reduzir usando a regra 75 (Expr)


Estado 28

   76 Expr: LVALUEPROP •

    $padrão  reduzir usando a regra 76 (Expr)


Estado 29

   10 CMD: Expr • DELIMITER
   13    | Expr • ASM DELIMITER
   54 LVALUEPROP: Expr • '[' Expr ']'
   55           | Expr • '[' Expr ']' '=' Expr
   56           | Expr • '.' LVALUE '=' Expr
   57           | Expr • '.' LVALUE
   60 Expr: Expr • ST Expr
   61     | Expr • GT Expr
   62     | Expr • '+' Expr
   63     | Expr • '-' Expr
   64     | Expr • '*' Expr
   65     | Expr • '/' Expr
   66     | Expr • '%' Expr
   67     | Expr • DOUBLE_EQUAL Expr
   73     | Expr • '(' ARGUMENTS ')'

    ASM           deslocar, e ir ao estado 57
    DOUBLE_EQUAL  deslocar, e ir ao estado 58
    DELIMITER     deslocar, e ir ao estado 59
    GT            deslocar, e ir ao estado 60
    ST            deslocar, e ir ao estado 61
    '-'           deslocar, e ir ao estado 62
    '+'           deslocar, e ir ao estado 63
    '*'           deslocar, e ir ao estado 64
    '/'           deslocar, e ir ao estado 65
    '%'           deslocar, e ir ao estado 66
    '['           deslocar, e ir ao estado 67
    '('           deslocar, e ir ao estado 68
    '.'           deslocar, e ir ao estado 69


Estado 30

   36 CMD_IF: IF '(' • Expr ')' CMD ELSE CMD
   37       | IF '(' • Expr ')' CMD

    ID           deslocar, e ir ao estado 5
    STRING       deslocar, e ir ao estado 12
    NUM          deslocar, e ir ao estado 13
    V_TRUE       deslocar, e ir ao estado 14
    V_FALSE      deslocar, e ir ao estado 15
    DOUBLE_PLUS  deslocar, e ir ao estado 16
    '-'          deslocar, e ir ao estado 17
    '{'          deslocar, e ir ao estado 41
    '['          deslocar, e ir ao estado 19
    '('          deslocar, e ir ao estado 20

    '-'      [reduzir usando a regra 83 (Expr)]
    '['      [reduzir usando a regra 83 (Expr)]
    '('      [reduzir usando a regra 83 (Expr)]
    $padrão  reduzir usando a regra 83 (Expr)

    LVALUE      ir ao estado 27
    LVALUEPROP  ir ao estado 28
    Expr        ir ao estado 70


Estado 31

   18 LET_VAR: ID •
   19        | ID • '=' '{' '}'
   20        | ID • '=' '[' ']'
   21        | ID • '=' Expr

    '='  deslocar, e ir ao estado 71

    $padrão  reduzir usando a regra 18 (LET_VAR)


Estado 32

   15 CMD_LET: LET LET_VARs •

    $padrão  reduzir usando a regra 15 (CMD_LET)


Estado 33

   16 LET_VARs: LET_VAR • ',' LET_VARs
   17         | LET_VAR •

    ','  deslocar, e ir ao estado 72

    $padrão  reduzir usando a regra 17 (LET_VARs)


Estado 34

   25 CONST_VAR: ID •
   26          | ID • '=' '{' '}'
   27          | ID • '=' '[' ']'
   28          | ID • '=' Expr

    '='  deslocar, e ir ao estado 73

    $padrão  reduzir usando a regra 25 (CONST_VAR)


Estado 35

   22 CMD_CONST: CONST CONST_VARs •

    $padrão  reduzir usando a regra 22 (CMD_CONST)


Estado 36

   23 CONST_VARs: CONST_VAR • ',' CONST_VARs
   24           | CONST_VAR •

    ','  deslocar, e ir ao estado 74
